--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       
       <!--Navbar Icons-->
       <span style="font-size: 2em">
-          <i class="far fa-file"></i>
+        <a href="https://www.resume.com/share/benjamindurham"target="_blank"><i class="far fa-file"></i></a>
       </span>
       
       <span style="font-size: 2em">
