--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <div class="flip-card">
   <div class="flip-card-inner">
     <div class="flip-card-front">
-      <img src="../assets/webtut.png" alt="webtut" style="width:200px;height:200px;">
+      <img src="../assets/webtut.jpg" alt="webtut" style="width:200px;height:200px;">
     </div>
     <div class="flip-card-back">
         <h5><a href="https://bendev33.github.io/TutorialWebsite/"target="_blank">Tutorial Website</a></h5> 
@@ -98,7 +98,7 @@
 <div class="flip-card">
   <div class="flip-card-inner">
     <div class="flip-card-front">
-      <img src="../assets/Creature.png" alt="Creature" style="width:200px;height:200px;">
+      <img src="../assets/Creature.jpg" alt="Creature" style="width:200px;height:200px;">
     </div>
     <div class="flip-card-back">
       <h5><a href="https://codepen.io/BenDurham/pen/QJPyYY"target="_blank">CSS Creature</a></h5>
@@ -112,7 +112,7 @@
   <div class="flip-card">
     <div class="flip-card-inner">
       <div class="flip-card-front">
-        <img src="../assets/Weather.png" alt="Weather" style="width:200px;height:200px;">
+        <img src="../assets/Weather.jpg" alt="Weather" style="width:200px;height:200px;">
       </div>
       <div class="flip-card-back">
         <h5><a href="https://apitempprojbd.firebaseapp.com/"target="_blank">Temperature</a></h5>
