--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <div class="flip-card">
   <div class="flip-card-inner">
     <div class="flip-card-front">
-      <img src="../assets/TutorialWebsite.jpg" alt="webtut" style="width:200px;height:200px;">
+      <img src="../assets/TutorialWebsite.jpg" alt="TutorialWebsite" style="width:200px;height:200px;">
     </div>
     <div class="flip-card-back">
         <h5><a href="https://bendev33.github.io/TutorialWebsite/"target="_blank">Tutorial Website</a></h5> 
@@ -112,7 +112,7 @@
   <div class="flip-card">
     <div class="flip-card-inner">
       <div class="flip-card-front">
-        <img src="../assets/Temperature.jpg" alt="Weather" style="width:200px;height:200px;">
+        <img src="../assets/Temperature.jpg" alt="Temperature" style="width:200px;height:200px;">
       </div>
       <div class="flip-card-back">
         <h5><a href="https://apitempprojbd.firebaseapp.com/"target="_blank">Temperature</a></h5>
