--- a/index.html
+++ b/index.html
@@ -84,11 +84,7 @@
         <header>
             <h2><a name="About">About Me</h2>
             </a>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
-                eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                deserunt mollit anim id est laborum.</p>
+            <p>Hi! I was Active Duty Army for 4 years and currently in Army Reserves. I've always been into technology. I got into coding when I was in Korea. I decided to make it a career when I got out the Army and ever since I've been very excited to be a part of a great community and look forward to grow my skills.</p>
 
         </header>
     </div>
