making projects responsive

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <a class="nav-link" href="#About">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#Projects">Projects</a>
+                    <a class="nav-link" href="#projects">Projects</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#Contact">Contact</a>
@@ -71,6 +71,7 @@
                 <i class="fab fa-linkedin"></i>
             </a>
         </span>
+
     </nav>
 
     <!--First Image and logo-->
@@ -84,7 +85,7 @@
         <header>
             <h2><a name="About">About Me</h2>
             </a>
-            <p>Hi! I was Active Duty Army for 4 years and currently in Army Reserves. I've always been into technology. I got into coding when I was in Korea. I decided to make it a career when I got out the Army and ever since I've been very excited to be a part of a great community and look forward to grow my skills.</p>
+            
 
         </header>
     </div>
@@ -94,27 +95,21 @@
 
     <!-- Projects-->
     <div class="container">
-        <h2><a name="Projects">Projects</h2></a>
+        <h2><a id="projects">Projects</h2></a>
         <div class="row">
-            <div class="col">
-                <div class="project1">
-                    <a href="https://codepen.io/BenDurham/full/maKWoQ" target="_blank"><img src="assets/Boo.jpg"></a>
-                </div>
+            <div class="project1">
+                <a href="https://hikingapp.herokuapp.com/" target="_blank"><img src="assets/hikingapp.jpg" ></a>
+                <p>React and Node</p>
+            </div>
+  
+            <div class="project2">
+                <a href="https://bendev33.github.io/TutorialWebsite/" target="_blank"><img src="assets/JSTutorial.jpg"></a>
+                <p>HTML and CSS</p>
             </div>
 
-
-
-            <div class="col">
-                <div class="project2">
-                    <a href="https://bendev33.github.io/TutorialWebsite/" target="_blank"><img src="assets/JSTutorial.jpg"></a>
-                </div>
-            </div>
-
-
-            <div class="col">
-                <div class="project3">
-                    <a href="https://spacexapi.firebaseapp.com/" target="_blank"><img src="assets/spacexapi.jpg"></a>
-                </div>
+            <div class="project3">
+                <a href="https://spacexapi.firebaseapp.com/" target="_blank"><img src="assets/spacexapi.jpg"></a>
+                <p>JavaScript</p>
             </div>
         </div>
     </div>
