--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         <!--Navbar Icons-->
         <span style="font-size: 2em">
-            <a href="https://www.resume.com/share/benjamindurham" target="_blank">
+            <a href="https://docs.google.com/document/d/1l569VeOAw3krRYfQ-rQ1Pg-nVoStpVlJTjcIQAuPJtQ/edit?usp=sharing" target="_blank">
                 <i class="far fa-file"></i>
             </a>
         </span>
@@ -85,6 +85,7 @@
         <header>
             <h2><a name="About">About Me</h2>
             </a>
+            <p>Hi, I'm a 26 year old self taught developer that loves tech and is always growing my skills and continues to learn everyday. I've been in the Army for 5 years. My girlfriend and I have been together for 8 years. We love to travel and explore. I started to get into Web development when I was in Korea. When I got out the Army, I decided to make it a career. </p>
         </header>
     </div>
 
@@ -95,15 +96,17 @@
     <div class="container">
         <h2><a id="projects">Projects</h2></a>
         <div class="row">
+            <div class="project2">
+                <a href="https://bendev33.github.io/TutorialWebsite/" target="_blank"><img src="assets/JSTutorial.jpg"></a>
+                <p>HTML and CSS</p>
+            </div>
+
+            
             <div class="project1">
                 <a href="https://hikingapp.herokuapp.com/" target="_blank"><img src="assets/hikingapp.jpg" ></a>
                 <p>React and Node</p>
             </div>
   
-            <div class="project2">
-                <a href="https://bendev33.github.io/TutorialWebsite/" target="_blank"><img src="assets/JSTutorial.jpg"></a>
-                <p>HTML and CSS</p>
-            </div>
 
             <div class="project3">
                 <a href="https://spacexapi.firebaseapp.com/" target="_blank"><img src="assets/spacexapi.jpg"></a>
