--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </span>
 
         <span style="font-size: 2em">
-            <a href="https://www.linkedin.com/feed/" target="_blank">
+            <a href="https://www.linkedin.com/in/ben-durham-315059176/" target="_blank">
                 <i class="fab fa-linkedin"></i>
             </a>
         </span>
