--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         <!--Navbar Icons-->
         <span style="font-size: 2em">
-            <a href="https://docs.google.com/document/d/1l569VeOAw3krRYfQ-rQ1Pg-nVoStpVlJTjcIQAuPJtQ/edit?usp=sharing" target="_blank">
+            <a href="https://www.resume.com/share/benjamindurham" target="_blank">
                 <i class="far fa-file"></i>
             </a>
         </span>
