added movie project

--- a/index.html
+++ b/index.html
@@ -96,6 +96,11 @@
     <div class="container">
         <h2><a id="projects">Projects</h2></a>
         <div class="row">
+            <div class="project4">
+                <a href="https://movie-search-site.herokuapp.com/" target="_blank"><img src="assets/movieSearch.jpg"></a>
+                <p>React</p>
+            </div>
+
             <div class="project2">
                 <a href="https://bendev33.github.io/TutorialWebsite/" target="_blank"><img src="assets/JSTutorial.jpg"></a>
                 <p>HTML and CSS</p>
