--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link href="https://fonts.googleapis.com/css?family=Rajdhani" rel="stylesheet">
 
     <link rel="stylesheet" href="./css/main.css">
-    <title>Portfolio</title>
+    <title>Ben Durham</title>
 </head>
 
 <body>
