--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         <!--Navbar Icons-->
         <span style="font-size: 2em">
-            <a href="https://www.resume.com/share/benjamindurham" target="_blank">
+            <a href="https://novoresume.com/a/ben.dev033.1" target="_blank">
                 <i class="far fa-file"></i>
             </a>
         </span>
@@ -120,7 +120,7 @@
             <header>
                 <h2><a name="About">About Me</h2>
                 </a>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium enim eveniet repudiandae facilis consequatur inventore fuga optio quo nesciunt sunt? Fugiat modi pariatur explicabo doloribus ut tempora in quisquam illo?</p>
+                <p>My first touch of code was when I was in Korea. When I saw "Hello World" display on the page I was instantly hooked. Ever since I have been learning and growing. I look forward to grow with a company and become a better developer.</p>
             </header>
     </div>
     
